# secure-llms

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/cloudformation/: oidc-role.yml
.github/workflows/: ci.yml  deploy.yml  enclave-session.yml  enclave-teardown.yml  fhe-train.yml
docs/: architecture.md  prd.md  project-brief.md
docs/stories/: 01-repo-foundation.md  02-federated-core.md  03-federated-aws.md  04-fhe-core.md  05-fhe-aws.md  06-enclave-app.md  (+3 more)
enclave/: README.md  pyproject.toml
enclave/infra/: package-lock.json  package.json
enclave/infra/lib/: enclave-stack.ts
enclave/infra/lib/teardown-lambda/: index.ts
enclave/src/enclave/: app.py  requirements.txt
enclave/src/parent/: server.py
enclave/src/parent/static/: app.js  index.html  style.css
enclave/tests/: test_enclave.py  test_server.py
federated/: Dockerfile  README.md  pyproject.toml
federated/infra/: package-lock.json  package.json
federated/infra/lib/: federated-stack.ts
federated/scripts/: run-task.sh
federated/src/: client.py  data.py  model.py  run.py  server.py
federated/tests/: test_data.py  test_model.py
fhe/: Dockerfile  README.md  pyproject.toml
fhe/infra/: eslint.config.mjs  package-lock.json  package.json
fhe/infra/lib/: fhe-stack.ts
fhe/scripts/: run-task.sh
fhe/src/: app.py  baseline.py  compare.py  encrypted.py  predict.py  preprocess.py  run.py  train.py
fhe/static/: app.js  index.html  style.css
fhe/tests/: test_baseline.py  test_preprocess.py  test_train_predict.py
infra/: cdk.context.json  package-lock.json  package.json
(+1 files in other folders)
