[project]
name = "secure-llms-enclave"
version = "0.1.0"
description = "Nitro Enclave secure chatbot with Bedrock Claude"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0,<4",
    "boto3>=1.34,<2",
    "cryptography>=42.0,<44",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
