[project]
name = "secure-llms-federated"
version = "0.1.0"
description = "Federated learning with Flower on MNIST"
requires-python = ">=3.10"
dependencies = [
    "flwr[simulation]>=1.11,<2",
    "torch>=2.0,<3",
    "torchvision>=0.15,<1",
    "numpy>=1.24,<2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
